# twfy_representative_portraits

./: Dockerfile  README.md  attribution_report.ipynb  docker-compose.yml  download_wikidata_attrib.py  process.py  pyproject.toml  readme.MD  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: fetch_official.yml  lint.yml  loadimage.yml  update_manual.yml
source/: wikidata_sources.csv
source/attrib/: legacy_attrib.csv  manual_attrib.csv  parliament_attrib.csv  scotparl_attrib.csv  senedd_attrib.csv  wikidata_sources_with_attrib.csv
src/twfy_representative_portraits/: __main__.py  download_wikidata_attrib.py  face.py  process.py
web/: attribution.json
